      more intuitive, add white outline to make them visible with dark Firefox widgets
    * Get rid of the odd blue QuickPost border in Firefox 2
    * Lots of code optimizations and refactoring
    * Multiple signatures, including board- and account-specific signatures and
      the option to randomly select them
    * Quick account switching from the context menu
    * New CSS: Ten On A Diet

2008-08-04:
    * version 0.6.2
    * Remove gfaqs9 support
    * Remove a bunch of old CSS
    * boards.gamefaqs.com/gfaqs -> www.gamefaqs.com/boards

2008-07-31:
    * version 0.6.1
    * Remove tags that aren't parsed by GameFAQs from quotes
    * Insert quotes at the position of the cursor in QuickPost
    * Use neutral colors for GFCode quotes
    * Limit number of recursive GFCode quotes (currently max 3 levels)

2008-07-29:
    * version 0.6.0
    * Update QuickWhois for new profiles
    * QuickPost now checks for errors after posting the message
    * Prevent long profile fields from stretching QuickWhois
    * QuickPost now catches short topic titles before sending the post
      to the server
    * Add GameFOX Standard Default stylesheet with the old QuickPost look
    * Add "Grab From GameFAQs" button to retrieve signature from GameFAQs
    * Remove site settings functionality
    * Add grab button to retrieve board settings from GameFAQs
    * Rewrite quoting backend, allow for user-defined quote templates. Quotes
      are now added in order at the bottom of the post, even with your
      signature in the textarea
    * New, more flexible theme options pane and CSS backend
    * Some efforts towards making GameFOX better for new users:
        - Enable the standard GameFOX stylesheet by default. This immediately
          cleans up GameFAQs a bit and styles QuickPost without the user
          having to figure out what to do
        - Display the options window automatically after installation