@@ -10,6 +10,8 @@
       the option to randomly select them
     * Quick account switching from the context menu
     * New CSS: Ten On A Diet
+    * Selection quoting: quote excerpts from messages by selecting them before
+      right clicking and quoting
 
 2008-08-04:
     * version 0.6.2
